--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -13,5 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Christopher!" />
+        android:text="Hello Christopher and Max!" />
+    <TextView android:id="@+id/result" android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
