--- a/app/src/main/res/layout/activity_start_matching.xml
+++ b/app/src/main/res/layout/activity_start_matching.xml
@@ -3,24 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_start_matching"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dev.app.mensabuddy.StartMatchingActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:text="Position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="122dp"
-        android:layout_marginStart="122dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="75dp"
         android:id="@+id/lblLocation"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
