--- a/app/src/main/res/layout/activity_start_matching.xml
+++ b/app/src/main/res/layout/activity_start_matching.xml
@@ -9,13 +9,19 @@
         android:text="Position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="75dp"
         android:id="@+id/lblLocation"
         android:textSize="30sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="154dp" />
+
+    <Spinner
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="101dp"
+        android:id="@+id/mensaSpin"/>
 
 </RelativeLayout>
