--- a/app/src/main/res/layout/activity_start_matching.xml
+++ b/app/src/main/res/layout/activity_start_matching.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lblLocation"
-        android:textSize="30sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="154dp" />
-
     <Spinner
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -22,6 +12,26 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="101dp"
-        android:id="@+id/mensaSpin"/>
+        android:id="@+id/mensaSpin"
+        android:spinnerMode="dialog" />
+
+    <Button
+        android:text="Liste sortieren"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/lblLocation"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp"
+        android:id="@+id/goBtn" />
+
+    <TextView
+        android:text="Position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblLocation"
+        android:textSize="30sp"
+        android:layout_below="@+id/mensaSpin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="125dp" />
 
 </RelativeLayout>
