--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -20,7 +20,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="1" />
+        android:layout_weight="0.40" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,8 +29,7 @@
         android:padding="5dp"
         android:background="@color/colorAccent"
         android:textColor="@android:color/white"
-        android:id="@+id/matchingBtn" />
-
+        android:id="@+id/mensaBtn" />
 
 
 </LinearLayout>
