--- a/app/src/main/res/layout/activity_start_matching.xml
+++ b/app/src/main/res/layout/activity_start_matching.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Spinner
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="101dp"
-        android:id="@+id/mensaSpin"
-        android:spinnerMode="dialog" />
-
     <Button
         android:text="Liste sortieren"
         android:layout_width="wrap_content"
@@ -33,5 +23,15 @@
         android:layout_below="@+id/mensaSpin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="125dp" />
+
+    <Spinner
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="101dp"
+        android:id="@+id/mensaSpin"
+        android:spinnerMode="dialog"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
