--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -16,7 +16,7 @@
         android:layout_below="@+id/inputNachname"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:id="@+id/spinner"
+        android:id="@+id/fakultaetSpinner"
         />
 
     <EditText
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/fakultaetSpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="41dp"
         android:id="@+id/inputInt1"
