--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -31,5 +31,11 @@
         android:textColor="@android:color/white"
         android:id="@+id/mensaBtn" />
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/testView" />
+
 
 </LinearLayout>
