--- a/app/src/main/res/layout/activity_mensa_menu.xml
+++ b/app/src/main/res/layout/activity_mensa_menu.xml
@@ -10,9 +10,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.dev.app.mensabuddy.MensaMenuActivity">
 
-    <TextView
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/menu_list" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/testFenster"/>
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_confirm_canteen"
+            android:background="@color/colorAccent"
+            android:textColor="@android:color/white"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/mensaBtn" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
