--- a/app/src/main/res/layout/activity_matching.xml
+++ b/app/src/main/res/layout/activity_matching.xml
@@ -11,38 +11,11 @@
     tools:context="com.dev.app.mensabuddy.MatchingActivity">
 
     <TextView
-        android:text="TextView"
+        android:text="Leider gibt es bisher kein passendes Match. Wenn aber jemand einen Partner sucht, melden wir uns sofort bei dir."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/matchText1" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/matchText1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/matchText2" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/matchText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/matchText3" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/matchText3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/matchText4" />
+        android:id="@+id/matchMessage" />
 
 </RelativeLayout>
