--- a/app/src/main/res/layout/activity_match_presentation.xml
+++ b/app/src/main/res/layout/activity_match_presentation.xml
@@ -55,6 +55,23 @@
         android:id="@+id/matchTelefon" />
 
     <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/matchTelefon"
+        android:layout_margin="10dp">
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/matchPieChart"/>
+
+
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
